fix: minor bugs